--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
